www/css/src/page-gallery.sass
main#gallery
  font-size: 0

  div#images

    div.image
      display: inline-block
      overflow: hidden
      text-align: center

      width: 300px
      height: 225px

      margin-right: 30px
      margin-bottom: 30px

      &:nth-child(3n)
        margin-right: 0

      span.tools
        position: absolute
        margin-left: calc(300px - 90px - 2px)
        display: inline-block
        width: 90px
        height: 30px
        background-color: $background
        border: 1px dashed $fontdark
        text-align: right

        a
          margin-left: 5px

          &.left
            margin-left: 0
            margin-right: 10px

          &.remove
            margin-right: 8px

          img
            margin-top: 5px
            width: 20px
            height: 20px


      span.centerer
        display: inline-block
        height: 100%
        vertical-align: middle

      a

        img
          display: inline-block
          vertical-align: middle

          cursor: pointer

    div#adder
      text-align: left
      font-size: $fontdefaultsize
      color: $fontlight

      div#adder-content
        width: calc(300px - 2em - 2px)
        height: calc(225px - 2em - 2px)

        padding: 1em
        border: 1px dashed $fontlight

        div#headline
          font-size: 1.2em
          font-weight: bold

        div#note
          font-size: .8em

        input[type^="file"]
          margin: 1.5em .3em .5em

        input[type^="submit"]
          margin: .5em .3em 1.5em
          padding: .3em
          border-radius: .2em

  p.no-pictures
    font-size: $fontdefaultsize

